--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
         <button type="submit" id="search-button">Search</button>
         <h3 id="result"></h3>
     </div>
-    <h2>Usage: <br>curl http://localhost:3000/search/&ltsearch-item&gt</h2>
+    <h2><br>Usage: <br>curl http://localhost:3000/search/&ltsearch-item&gt</h2>
     <script>
             $("#search-button").click(() => {
                 var item = $("#search-text").val();
